# Piscine_Python

Module_00/: requirements.txt
Module_00/ex00/: answers.txt
Module_00/ex02/: whois.py
Module_00/ex03/: count.py
Module_00/ex04/: operations.py
Module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Module_00/ex06/: .recipe.py.swp  recipe.py
Module_00/ex07/: .filterwords.py.swp  filterwords.py
Module_00/ex08/: sos.py
Module_00/ex09/: guess.py
Module_00/ex10/: loading.py
Module_01/: exec.py
Module_01/ex00/: book.py  recipe.py  test.py
Module_01/ex01/: game.py  test.py
Module_01/ex02/: test.py  vector.py
Module_01/ex03/: .generator.py.swo  generator.py
Module_01/ex04/: eval.py
Module_01/ex05/: the_bank.py
Module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module_02/ex01/: main.py
Module_02/ex02/: logger.py
Module_02/ex03/: csvreader.py
Module_02/ex04/: README.md  build.sh  setup.cfg  setup.py  test.py
Module_02/ex04/src/my_minipack/: loading.py  logger.py
Module_03/ex00/: NumPyCreator.py
Module_03/ex01/: ImageProcessor.py
Module_03/ex02/: ScrapBooker.py
Module_03/ex03/: ColorFilter.py  ImageProcessor.py
Module_03/ex04/: Kmeans.py
