[metadata]
name = my_minipack
version = 1.0.0
author = jtrauque
author_email = jtrauque@student.42.fr
description = A small example package in python
long_description = file: README.md
long_description_content_type = text/markdown
installer = pip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
