[metadata]
name = my_minipack
version = 1.0.0
author = jtrauque
author_email = jtrauque@student.42.fr
description = A small example package in python
metadata-Version = 2.1
license = GPLv3
installer = pip
classifiers =
	Developpement Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Students
	Topic :: Eductation
	Topic :: HowTo
	Topic :: Package
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
